# recipes

aria2/: README.md  aria2.conf
bat/: adb_upload.bat  macaroon_tool.bat  telnet.bat  test_wifi_by_iperf.bat
bat/pscp_upload/: README.txt  upload.bat
c_cpp/: exec_command.c  ipv4_convert.c  mac_convert.c  syslog.c  tcp_client.c  tcp_server.c  udp_client.c  udp_server.c
c_cpp/embedding_binary_2_executable/: CMakeLists.txt  README.md
c_cpp/embedding_binary_2_executable/main/: CMakeLists.txt  main.cpp
c_cpp/embedding_binary_2_executable/png/: CMakeLists.txt
chrome/crx_mouse/: README.md  import_config.txt
chrome/switchy_omega/: import_config.txt
chrome/tamper_monkey/: README.md  import_config.txt  scripts.txt
clang-format/: README.md  google_style.clang-format
git-bash/: README.md  git-prompt.sh
html/: ascii_counter.html  list_glyphs_in_font.html  scale_convert.html
mobaxterm/: MobaXterm.ini
oh-my-zsh/: README.md  agnoster.zsh-theme  agnoster_random.zsh-theme
putty/: README.md  minttyrc
python/: softlink_to_dir.py
shell/: 256colors.sh  bashrc  build_minigui_with_tslib.sh  calculate_gpio.sh  convert_encoding.sh  dec.sh  gen_patch.sh  genpatch.sh  install_ubuntu_softwares.sh  random_color.sh  scp.sh  scpscript.sh  softlink_to_dir.sh  ssr  sys_proxy.sh  ubuntu_apt_source.sh
tamper_monkey/: scripts.txt
tig/: tigrc
tmux/: README.md  tmux.conf
ubuntu/: ubuntu_terminal_color.txt
vim/: README.md  vimrc
vscode/: linux.code-profile  windows.code-profile
windows_terminal/: README.md  settings.json
xshell/: Ubuntu.xcs
zsh/: zshrc
(+7 files in other folders)
